k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dictionary-api
  labels:
    name: dictionary-api
